// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useDateRange hook tests returns basic properties: Single Day 1`] = `
Object {
  "ISODateString": "2019-12-29",
  "__type": Symbol(DayOfRangeMonth),
  "date": 2019-12-29,
  "dayName": "SUNDAY",
  "inCurrentMonth": false,
  "inRange": false,
  "isEnd": false,
  "isStart": false,
}
`;

exports[`useDateRange hook tests selection works for only when endDate > startDate: 01. No Selection 1`] = `
         S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S
Jan =>     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |    
Feb =>     |     |     |     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |     |     |     |     |     |     |    
Mar =>  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |     |     |     |    
`;

exports[`useDateRange hook tests selection works for only when endDate > startDate: 02. Start date selected 1`] = `
         S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S
Jan =>     |     |     | *01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |    
Feb =>     |     |     |     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |     |     |     |     |     |     |    
Mar =>  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |     |     |     |    
`;

exports[`useDateRange hook tests selection works for only when endDate > startDate: 03. Start & End dates selected 1`] = `
         S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S
Jan =>     |     |     | *01 | *02 | *03 | *04 | *05 | *06 | *07 | *08 | *09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |    
Feb =>     |     |     |     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |     |     |     |     |     |     |    
Mar =>  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |     |     |     |    
`;

exports[`useDateRange hook tests selection works for only when endDate > startDate: 04. Start date selected again 1`] = `
         S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S
Jan =>     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 | *09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |    
Feb =>     |     |     |     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |     |     |     |     |     |     |    
Mar =>  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |     |     |     |    
`;

exports[`useDateRange hook tests selection works for only when endDate > startDate: 05. Try selecting smaller end date again 1`] = `
         S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S
Jan =>     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 | *09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |    
Feb =>     |     |     |     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |     |     |     |     |     |     |    
Mar =>  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |     |     |     |    
`;

exports[`useDateRange hook tests setMonths works 1`] = `
         S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S
Jan =>     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |    
Feb =>     |     |     |     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |     |     |     |     |     |     |    
Mar =>  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |     |     |     |     |     |    
`;

exports[`useDateRange hook tests setMonths works 2`] = `
         S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S |   S |   M |   T |   W |   T |   F |   S
Apr =>     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |     |     |     |     |     |     |     |     |    
May =>     |     |     |     |     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |  31 |     |     |     |     |     |    
Jun =>     |  01 |  02 |  03 |  04 |  05 |  06 |  07 |  08 |  09 |  10 |  11 |  12 |  13 |  14 |  15 |  16 |  17 |  18 |  19 |  20 |  21 |  22 |  23 |  24 |  25 |  26 |  27 |  28 |  29 |  30 |     |     |     |     |     |     |     |     |     |     |    
`;
